@@ -9,6 +9,25 @@ if "%OS%" == "Windows_NT" (
   set DIRNAME=.\
 )
 
+setlocal EnableDelayedExpansion
+rem check for the security manager system property
+echo(!SERVER_OPTS! | findstr /r /c:"-Djava.security.manager" > nul
+if not errorlevel == 1 (
+    echo ERROR: The use of -Djava.security.manager has been removed. Please use the -secmgr command line argument or SECMGR=true environment variable.
+    GOTO :EOF
+)
+setlocal DisableDelayedExpansion
+
+rem check for secmgr property
+setlocal EnableDelayedExpansion
+echo(!JAVA_OPTS! | findstr /r /c:"-Dsecmgr" > nul
+if not errorlevel == 1 (
+   set "line=%JAVA_OPTS%"
+   set JAVA_OPTS=!line:-Dsecmgr= !
+   set SECMGR=true
+)
+setlocal DisableDelayedExpansion
+
 pushd "%DIRNAME%.."
 set "RESOLVED_JBOSS_HOME=%CD%"
 popd
@@ -46,6 +65,14 @@ if not exist "%JBOSS_RUNJAR%" (
   goto END
 )
 
+
+rem Set the module options
+set "MODULE_OPTS="
+if "%SECMGR%" == "true" (
+    set "MODULE_OPTS=-secmgr"
+)
+
+
 rem Set default module root paths
 if "x%JBOSS_MODULEPATH%" == "x" (
   set "JBOSS_MODULEPATH=%JBOSS_HOME%\modules"
@@ -55,6 +82,7 @@ set "JAVA_OPTS=%JAVA_OPTS% -Dprogram.name=wsprovide.bat"
 
 "%JAVA%" %JAVA_OPTS% ^
     -jar "%JBOSS_RUNJAR%" ^
+    "%MODULE_OPTS%"^
     -mp "%JBOSS_MODULEPATH%" ^
      org.jboss.ws.tools.wsprovide ^
      %*
